[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/BoxesDream.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/InventoryUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 108
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 108
font_data = ExtResource( 1 )

[node name="InventoryUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="InventoryUI" type="Control" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -936.0
margin_top = 50.0
margin_right = 936.0
margin_bottom = 914.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="InventoryUI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="InventoryUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -350.0
margin_right = 800.0
margin_bottom = 350.0
color = Color( 0.309804, 0.27451, 0.27451, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="InventoryUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -350.0
margin_right = 800.0
margin_bottom = 250.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryUI/Inventory"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -750.0
margin_top = -250.0
margin_right = 750.0
margin_bottom = 250.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryUI/Inventory/ScrollContainer"]

[node name="ItemList" type="ItemList" parent="InventoryUI/Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
margin_bottom = -50.0
custom_fonts/font = SubResource( 1 )
max_columns = 12
same_column_width = true
icon_mode = 0
icon_scale = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Control" parent="InventoryUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -800.0
margin_top = -200.0
margin_right = 800.0
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="InventoryUI/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.160784, 0.129412, 0.129412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryUI/Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -750.0
margin_top = -52.0
margin_right = 750.0
margin_bottom = 52.0
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="InventoryUI/Button/HBoxContainer"]
margin_right = 121.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
text = "Close"

[node name="Use" type="Button" parent="InventoryUI/Button/HBoxContainer"]
margin_left = 141.0
margin_right = 226.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Use"
[connection signal="item_selected" from="InventoryUI/Inventory/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="InventoryUI/Button/HBoxContainer/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="InventoryUI/Button/HBoxContainer/Use" to="." method="_on_Use_pressed"]
